--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-lights-out",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.3.1",
+    "npm": "6.9.0"
+  },
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
